option('enable_profiling', type: 'boolean', value: false)

option('enable_glade_catalog', type: 'boolean', value: false)
option('enable_gtk_doc', type: 'boolean', value: false)
option('with_introspection', type: 'boolean', value: true)

option('enable_gtk', type: 'combo', value: 'auto',
       choices: [ 'false', 'true', 'auto' ])

option('enable_lua5_1', type: 'combo', value: 'auto',
       choices: [ 'false', 'true', 'auto' ])
option('enable_luajit', type: 'combo', value: 'auto',
       choices: [ 'false', 'true', 'auto' ])
option('enable_python2', type: 'combo', value: 'auto',
       choices: [ 'false', 'true', 'auto' ])
option('enable_python3', type: 'combo', value: 'auto',
       choices: [ 'false', 'true', 'auto' ]) 
